[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/Game.gd" type="Script" id=1]
[ext_resource path="res://game/Camera.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/Escpanel.gd" type="Script" id=4]
[ext_resource path="res://world/World.gd" type="Script" id=6]
[ext_resource path="res://game/Entities.gd" type="Script" id=15]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldGen" type="Node2D" parent="."]
script = ExtResource( 6 )
worldYSortPath = NodePath("../WorldYSort")

[node name="Entities" type="Node2D" parent="."]
script = ExtResource( 15 )
worldYSortPath = NodePath("../WorldYSort")

[node name="WorldYSort" type="YSort" parent="."]

[node name="Camera" type="Camera2D" parent="."]
current = true
script = ExtResource( 2 )

[node name="Escpanel" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="EscPanelContainer" type="CenterContainer" parent="Escpanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="Escpanel/EscPanelContainer"]
margin_left = 345.0
margin_top = 239.0
margin_right = 679.0
margin_bottom = 361.0

[node name="MarginContainer" type="MarginContainer" parent="Escpanel/EscPanelContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 327.0
margin_bottom = 115.0

[node name="VBoxContainer" type="VBoxContainer" parent="Escpanel/EscPanelContainer/PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 98.0
rect_min_size = Vector2( 300, 0 )

[node name="BackToTheGame" type="Button" parent="Escpanel/EscPanelContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 36.0
text = "Resume"

[node name="Margin" type="Control" parent="Escpanel/EscPanelContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 300.0
margin_bottom = 44.0

[node name="LeaveGame" type="Button" parent="Escpanel/EscPanelContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 300.0
margin_bottom = 88.0
text = "Leave World"

[connection signal="pressed" from="Escpanel/EscPanelContainer/PanelContainer/MarginContainer/VBoxContainer/BackToTheGame" to="Escpanel" method="_on_BackToTheGame_pressed"]
[connection signal="pressed" from="Escpanel/EscPanelContainer/PanelContainer/MarginContainer/VBoxContainer/LeaveGame" to="Escpanel" method="_on_LeaveGame_pressed"]
